Sidebar finalizada + index

--- a/index.html
+++ b/index.html
@@ -4,14 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio | Comedor El Balde</title>
-    <link 
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" 
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+    rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
     crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="img/El balde logo.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/cf9beab4c7.js" crossorigin="anonymous"></script>
+
 </head>
-<body>
+<body class="index-body">
+    <!-- Html contenido principal del index -->
+<main class="hero">
+<div class="hero-content">
+    <h1>El Balde</h1>
+    <p>
+    Lorem ipsum dolor sit amet consectetur adipiscing elit, inceptos dis 
+    dignissim ante metus consequat blandit vel, commodo natoque lobortis 
+    pulvinar ad elementum. Condimentum
+    </p>
+    <a href="#" class="btn-hero">Vamos</a>
+</div>
+</main>
+
+    
+
+<!-- Html sidebar -->
+    <button class="sidebar-toggle">
+        <i class="fas fa-bars"></i>
+    </button>
+    <aside class="sidebar">
+        <div class="sidebar-header">
+            <h1 class="logo">El Balde</h1>
+            <button class="close-btn">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+
+        <ul class="links">
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="./pages/about.html">NOSOTROS</a></li>
+                <li><a href="./pages/contact.html">CONTACTO</a></li>
+                <li><a href="./pages/downloads.html">DESCARGAS</a></li>
+        </ul>
+        <img src="./img/El balde logo.png" alt="" class="sidebar-logo">
+
+    </aside>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    
+    <script src="./script.js"></script>
+
+
+
+
 </body>
 </html>
