--- a/index.html
+++ b/index.html
@@ -43,19 +43,16 @@
 
         <ul class="links">
                 <li><a href="index.html">INICIO</a></li>
-                <li><a href="./pages/about.html">NOSOTROS</a></li>
+                <li><a href="./pages/about.html">ACERCA DE</a></li>
                 <li><a href="./pages/contact.html">CONTACTO</a></li>
                 <li><a href="./pages/downloads.html">DESCARGAS</a></li>
         </ul>
         <img src="./img/El balde logo.png" alt="" class="sidebar-logo">
-
     </aside>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>   
     <script src="./script.js"></script>
-
-
-
-
 </body>
 </html>
