Pagina web para El balde finalizada

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 <div class="hero-content">
     <h1>El Balde</h1>
     <p>
-    Lorem ipsum dolor sit amet consectetur adipiscing elit, inceptos dis 
-    dignissim ante metus consequat blandit vel, commodo natoque lobortis 
-    pulvinar ad elementum. Condimentum
+    Donde cada comida se convierte en celebración. En El Balde, combinamos sabores auténticos con un ambiente vibrante para que cada visita sea inolvidable. Ven a disfrutar, brindar y compartir momentos únicos.
     </p>
     <a href="#" class="btn-hero">Vamos</a>
 </div>
