--- a/pages/about.html
+++ b/pages/about.html
@@ -93,13 +93,13 @@
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <h2>Mision:</h2>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet consectetur adipiscing elit, inceptos dis dignissim ante metus consequat blandit vel, commodo natoque lobortis pulvinar ad elementum. Condimentum</li>
+                        <li>Desarrollar un sistema de gestion y ventas para el comedor "El Balde" que permita tener un mejor control en el ecosistema de negocios de "El Balde", mejorando las ventas, compras, inventario y eficiencia de procesos.</li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <h2>Vision:</h2>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet consectetur adipiscing elit, inceptos dis dignissim ante metus consequat blandit vel, commodo natoque lobortis pulvinar ad elementum. Condimentum</li>
+                        <li>Generar una transformacion tecnologica en el negocio "El Balde" para poder impulsar al negocio en sus procesos de gestiones y ventas, ademas de impulsar el crecimiento de "El Balde" mejorando asi los procesos realizados en el negocio.</li>
                     </ul>
                 </div>
             </div>
@@ -112,7 +112,10 @@
                 <div class="col-sm-12 col-md-4 col-lg-4">
                 <h2>Valores:</h2>
                     <ul>
-                        <li>Lorem ipsum dolor sit amet consectetur adipiscing elit, inceptos dis dignissim ante metus consequat blandit vel, commodo natoque lobortis pulvinar ad elementum. Condimentum</li>
+                        <li><b>Compromiso:</b> Asegurar que el equipo de desarrollo cumpla los plazos acordados y que se trabaje de manera eficiente.</li>
+                        <li><b>Responsibilidad:</b> Cada integrante es responsable de su trabajo haciendolo de forma conciente y con una actitud de solucion.</li>
+                        <li><b>Colaboracion:</b> El compromiso de integrar el trabajo sin fricción y ayudar a los compañeros a superar bloqueos técnicos.</li>
+                        <li><b>Compañerismo:</b> se muestra una actitud de ayuda hacia los compañeros al momento de bridar ideas y solucionar problemas.</li>
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
