--- a/pages/downloads.html
+++ b/pages/downloads.html
@@ -66,47 +66,26 @@
     <br><br><br>
 
 
-    <div class="d-flex align-items-center justify-content-center h-100">
-    <div class="container-carousel">
-    <div id="carouselExampleCaptions" class="carousel slide" style="width: 300px;">
-        <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="../img/Carlos Ayala.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-            <h5>Carlos Ayala</h5>
-            <p>“Con este sistema, he podido disminuir el gasto de tiempo y papel que conlleva registrar todo a mano, con lo que he podido invertir en más productos y aumentar mis ventas”.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="../img/Esteban Alberto Rodríguez.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-            <h5>Esteban Alberto Rodríguez</h5>
-            <p>“Desde que empecé a usar este sistema, el tiempo que dedico a tareas administrativas ha disminuido a la mitad, lo que me ha permitido dedicar más tiempo a atender a mis clientes y pasar más tiempo con mi familia”.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="../img/Alberto Domínguez.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-            <h5>Alberto Domínguez</h5>
-            <p>“Este sistema me ha permitido automatizar ciertos aspectos de mi negocio, con lo que he logrado aumentar mis ventas y contratar más empleados para que me ayuden en mi negocio que cada vez crece más”.</p>
-            </div>
-        </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-        </button>
+    <div id="carouselExample" class="carousel slide">
+<div class="carousel-inner">
+    <div class="carousel-item active">
+    <img src="../img/Cliente satisfecho 1.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+    <img src="../img/Cliente satisfecho 2.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+    <img src="../img/Cliente satisfecho 3.png" class="d-block w-100" alt="...">
     </div>
 </div>
+<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+</button>
+<button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+</button>
 </div>
 
     </section>
