Adición de acciones de los botones

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>
     Donde cada comida se convierte en celebración. En El Balde, combinamos sabores auténticos con un ambiente vibrante para que cada visita sea inolvidable. Ven a disfrutar, brindar y compartir momentos únicos.
     </p>
-    <a href="#" class="btn-hero">Vamos</a>
+    <a href="files/Menú Balde copia.pdf" class="btn-hero" download target="_blank">Vamos</a>
 </div>
 </main>
 
