--- a/pages/downloads.html
+++ b/pages/downloads.html
@@ -44,8 +44,9 @@
 
         <div class="col-sm-12 col-md-6 col-lg-6">
             <div class="d-grid gap-2 col-6 mx-auto">
-                <button class="btn btn-success btn-lg" style="color: black;" type="button"><img src="../img/Descargar icono.png" height="30px" alt="">
+                <button id="downloadBtn" class="btn btn-success btn-lg" style="color: black;" type="button"><img src="../img/Descargar icono.png" height="30px" alt="">
                     <hr><b>Descarga nuestro sistema</b></button>
+                <a id="downloadLink" href="../files/files.rar" download></a>
             </div>
         </div>
         <br>
@@ -89,9 +90,6 @@
 </div>
 
     </section>
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="../script.js"></script>
