--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
         <img src="./img/El balde logo.png" alt="" class="sidebar-logo">
     </aside>
 
-
+    <footer>
+        <p>©Copyright
+            <br>
+            Contactos:@elbalde2025-elbalde2025@gmail.com-+503 7574-1027</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>   
     <script src="./script.js"></script>
